webapp/src/App.css
/*   Color scheme
#1F2232;    # Dark Metallic
#EC4E20;    # Red
#E8ECEE;    # Light grey
#40798C;    # Teal
#70A9A1;    # Green
*/

.App {
  text-align: center;
}

.App-header {
  background-color: #1F2232;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  height: 60px;
}

.App-link {
  color: #40798C;
}

body {
  background: #E8ECEE;
}

.Body{
  background: #E8ECEE;
  min-height: 85vh;
  padding-bottom: 1em;
  padding-top: 2em;
}

.HomeNavBar{
  margin-bottom: 0px;
}

footer {
  padding: 1em;
  background: white;
}

footer .btn {
  margin-top: -0.5em;
}

@media (max-width: 650px) {
  .Body {
    padding-top: 3em;
  }
}

.container-fluid {
  padding-right: 30px;
  padding-left: 30px;
}

.link-style{
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
}

.navbar-brand .brand-image {
  margin-right: 10px;
}

.alert-container{
  margin-top: 16px;
}

